--- a/form-page.css
+++ b/form-page.css
@@ -53,6 +53,24 @@ nav a {
   width: 50%;
   margin: auto;
 }
+.container input[type=text] {
+  width: 24rem;
+  padding: 8px;
+}
+.container input [type=submit] {
+  width: 24rem;
+}
+.container button {
+  margin-top: 5px;
+  width: 25rem;
+  padding: 8px;
+  border: none;
+  border-radius: 10px;
+}
+.container button:hover {
+  transform: scale(1.1);
+  background-color: gray;
+}
 
 .tshirt {
   width: 20rem;
@@ -60,4 +78,10 @@ nav a {
 }
 .tshirt:hover {
   transform: scale(1.1);
+}
+
+footer {
+  margin-top: 2rem;
+  height: 7rem;
+  background-color: black;
 }/*# sourceMappingURL=form-page.css.map */
