--- a/form-page.css
+++ b/form-page.css
@@ -84,4 +84,15 @@ footer {
   margin-top: 2rem;
   height: 7rem;
   background-color: black;
+}
+
+@media screen and (max-width: 568px) {
+  .logo img {
+    display: none;
+  }
+}
+@media screen and (max-width: 447px) {
+  li {
+    float: none;
+  }
 }/*# sourceMappingURL=form-page.css.map */
