--- a/styles.scss
+++ b/styles.scss
@@ -6,28 +6,23 @@ body {
     width: 100%;
     overflow: auto;
     background-color: black;
-  }
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        li {
+            float: right;
+          }
+    } 
 }
-
-li {
-    float: right;
-  }
-
-
 
 .logo img {
     position: absolute;
     height: 46.4px;
     width: 170px;
     margin: 0;
-    /* padding: 0; */
-}
+} 
 
 nav a {
     margin: 0 2rem;
@@ -190,17 +185,15 @@ h1 {
         font-weight: bold;
         padding: 8px;
         background-color: white;
-      }
-
-    .info-button:hover {
-        background-color: gray;
-        transform: scale(1.1);
-      }
-
-      .info-button a {
-        text-decoration: none;
-        color: black;
-      }
+        &:hover {
+            background-color: gray;
+            transform: scale(1.1);
+        }
+       }
+       .info-button a {
+         text-decoration: none;
+         color: black;
+       }
   }
 
   footer {
